syntax = "proto3";

option csharp_namespace = "ClientService.Protos";

package ClientService;

service JobC {
  rpc StartJob (StartJobRequest) returns (StartJobReply);
  rpc SendReciveFile(FileRequest) returns (stream ChunkMsg);
}

message StartJobRequest {
  string JobNumber = 1;
  string MachineName = 2;
  string FolderPath = 3;
  repeated string Files = 4;
}

message StartJobReply {
  string IsStarted = 1;
}

message ChunkMsg {
    string FileName = 1;
    int64 FileSize = 2;

    int32 ChunkSize = 3;
    bytes Chunk = 4;

    bool IsCanceled = 5;
}

message FileRequest {
    string FilePath = 1;
}